Bug 113378 - Table properties: the icons on preset buttons for outlining the table do not correspond to the actions and the popup tooltips
Summary: Table properties: the icons on preset buttons for outlining the table do not ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.beta2
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Table-Properties-Dialog
  Show dependency treegraph
 
Reported: 2017-10-23 14:11 UTC by prep
Modified: 2017-11-06 09:25 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
example of discrepancy button image and button action (52.70 KB, image/png)
2017-10-23 14:11 UTC, prep
Details
Screenshot of normal icons (marked with red) in 5.3 (10.78 KB, image/png)
2017-10-24 06:13 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description prep 2017-10-23 14:11:09 UTC
Created attachment 137232 [details]
example of discrepancy button image and button action

Most right and two preceding buttons of outlining scheme selection labeled with non-correct images which do not correspond to the actions.
Comment 1 Mike Kaganski 2017-10-24 06:09:26 UTC
Already reproducible with Version: 5.4.0.0.beta2 (x64)
Build ID: 3cc1cdd8ee50f144e5514da51800a08119754d8f
CPU threads: 4; OS: Windows 6.19; UI render: default; 
Locale: ru-RU (ru_RU); Calc: CL

OK with Version: 5.3.4.2 (x64)
Build ID: f82d347ccc0be322489bf7da61d7e4ad13fe2ff3
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; Layout Engine: new; 
Locale: ru-RU (ru_RU); Calc: CL

/cygdrive/d/sources/bibisect-win32-5.4
$ git bisect log
# bad: [ce4dd90e7ca9dbdd95cd371173de6fc199859a4d] source f200d5700782ae179fd96b6ad4b0fe8e7edd1616
# good: [633bfe84509c1953415e5dd0f564098a16890131] source 4136757b4e51c4e6f7cb4132c95538a7f831ef2c
git bisect start 'master' 'oldest'
# bad: [b0dbbec4cf8fe5d5e886cce07fd4f377e4f2559e] source c2b1336b7b2fbec0172c09e247593bd43320f5fd
git bisect bad b0dbbec4cf8fe5d5e886cce07fd4f377e4f2559e
# bad: [07aa4febb313d4b3f31b4ef6474c7b38acfb0a94] source efbbf4a7950a63b771877f5e9fc98acb174d55ed
git bisect bad 07aa4febb313d4b3f31b4ef6474c7b38acfb0a94
# bad: [622b8221f17acd002edc9c8207aa97c15a3d7d4e] source 21033d04fd55470cb8b693bca4af2058da2a8dcc
git bisect bad 622b8221f17acd002edc9c8207aa97c15a3d7d4e
# good: [afa33e93ec9d35fd02beee87a45ece5537afca7c] source fe9a5a4b4ac260ebe7c582d2923f926ab9d9f294
git bisect good afa33e93ec9d35fd02beee87a45ece5537afca7c
# bad: [74a99e48f505d0db22cf91a3f8c782f186a391b5] source 1fec83409ced6f6421e2dccc0fcae59a04f5ffa7
git bisect bad 74a99e48f505d0db22cf91a3f8c782f186a391b5
# bad: [fef9e1b983356a913777ef0f75f7339b77bff975] source b6aad6de12df9534e82f5a8ef8184cac77e5c6b4
git bisect bad fef9e1b983356a913777ef0f75f7339b77bff975
# bad: [ac30c914eb23fb89894b4cdab4bec599e6ff554b] source c74688dfd40351cead1644d8cfe9dad4622d9edc
git bisect bad ac30c914eb23fb89894b4cdab4bec599e6ff554b
# bad: [81e6cf6595ee6aaff6c1b6195f845a40e37c4536] source 65042d82a474fb6020add272cd7615517d606dc9
git bisect bad 81e6cf6595ee6aaff6c1b6195f845a40e37c4536
# bad: [8e28966df76b9c1569477bb5ea60564a18f2a5aa] source 7c7e1fb0f2a088ad80caaa7a45e7bc9e7df5b31f
git bisect bad 8e28966df76b9c1569477bb5ea60564a18f2a5aa
# bad: [1e580f953bb1ac75fbce5e7608178bce1537665c] source 62fe303d167fbfe99d41cfa625942486e65fbe06
git bisect bad 1e580f953bb1ac75fbce5e7608178bce1537665c
# good: [75509679f28b6a8f08099b4bf086dcc6b19ba635] source 2d0e3d1cc6fd062fe2064bb9ae688ff37a4a94e4
git bisect good 75509679f28b6a8f08099b4bf086dcc6b19ba635
# bad: [a301cd9544d43a7f4cc58f2c4c408be4df9816dc] source 6aca7389c63a39387fc08acfb824ba96037f5662
git bisect bad a301cd9544d43a7f4cc58f2c4c408be4df9816dc
# good: [f3f4a8ecd6995a3552dbec2cd9311b2958f74291] source 398a5f23a751721901fbb0d60d9ea7c1e1c72fcc
git bisect good f3f4a8ecd6995a3552dbec2cd9311b2958f74291
# first bad commit: [a301cd9544d43a7f4cc58f2c4c408be4df9816dc] source 6aca7389c63a39387fc08acfb824ba96037f5662

https://cgit.freedesktop.org/libreoffice/core/commit/?id=6aca7389c63a39387fc08acfb824ba96037f5662

author	Caolán McNamara <caolanm@redhat.com>	2016-12-21 13:10:40 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2016-12-21 14:13:49 (GMT)
commit 6aca7389c63a39387fc08acfb824ba96037f5662
tree 5243e8f2d24c32ae80bbe606d11961eec60278b2
parent 398a5f23a751721901fbb0d60d9ea7c1e1c72fcc
unwind IL_PRE_BITMAPS ImageList
Comment 2 Mike Kaganski 2017-10-24 06:13:12 UTC
Created attachment 137247 [details]
Screenshot of normal icons (marked with red) in 5.3

The problem is that currently, the icons that must be shown when only a single cell is selected, are now shown when multiple cells are selected (or no selection is made inside a table). The screenshot shows how the icons should look like for multiselection (to clarify the original report).
Comment 3 Commit Notification 2017-10-25 15:30:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ece7f54a6ddcb635822ca51b7558561d69af7934

Resolves: tdf#113378 wrong table border preset icons

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Roman Kuznetsov 2017-10-25 17:50:11 UTC
backport it please to 5.4
Comment 5 Commit Notification 2017-10-25 23:08:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=662d3d1404708245a17d3e94e99ebeb8cb068e50&h=libreoffice-5-4

Resolves: tdf#113378 wrong table border preset icons

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.