Resolves: tdf#113378 wrong table border preset icons

Change-Id: Ibb9d0bcab6720fd85d5d3e2ae82821ff1c003c5b
Reviewed-on: https://gerrit.libreoffice.org/43820
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>